--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,18 @@ name: Deploy
 # https://raw.githubusercontent.com/sitek94/vite-deploy-demo/main/.github/workflows/deploy.yml
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
   build:
+
+    # defaults:
+    #   run:
+    #     working-directory: src
+  
     name: Build
     runs-on: ubuntu-latest
 
@@ -25,12 +31,13 @@ jobs:
 
       - name: Build project
         run: npm run build
+        working-directory: src
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
         with:
           name: production-files
-          path: ./dist
+          path: ./src/dist
 
   deploy:
     name: Deploy
@@ -43,10 +50,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: production-files
-          path: ./dist
+          path: ./src/dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./src/dist
