--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
   push:
     branches:
       - main
+    # paths: src/**
+  # pull_request:
+  #   branches: [ main ]
+  #   paths: src/**    
 
 jobs:
   build:
@@ -18,6 +22,14 @@ jobs:
   
     name: Build
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+      # issues: read
+      # checks: write
+      # pull-requests: write
+      # pages: write
+      # id-token: write
 
     steps:
       - name: Checkout repo
