--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,13 +23,13 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
-      # issues: read
-      # checks: write
-      # pull-requests: write
-      # pages: write
-      # id-token: write
+    # permissions:
+    #   contents: write
+    #   # issues: read
+    #   # checks: write
+    #   # pull-requests: write
+    #   # pages: write
+    #   # id-token: write
 
     steps:
       - name: Checkout repo
@@ -58,6 +58,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+
+    permissions:
+      contents: write
 
     steps:
       - name: Download artifact
