--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint-fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write src/**/*.{ts,tsx,js,css,html,json}",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -27,6 +29,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
